Implemented user stories