@@ -1,25 +1,35 @@
 package com.firstversion.socialmedia.service.impl;
 
 import com.firstversion.socialmedia.config.CloudinaryService;
+import com.firstversion.socialmedia.common.constant.CloudinaryConstant;
 import com.firstversion.socialmedia.dto.request.CreateStoryRequest;
 import com.firstversion.socialmedia.dto.response.story.StoryResponse;
 import com.firstversion.socialmedia.exception.NotFoundException;
-import com.firstversion.socialmedia.model.entity.Post;
+import com.firstversion.socialmedia.mapper.StoryMapper;
+import com.firstversion.socialmedia.model.entity.Music;
+import com.firstversion.socialmedia.model.entity.Sticker;
 import com.firstversion.socialmedia.model.entity.Story;
+import com.firstversion.socialmedia.model.entity.StorySticker;
+import com.firstversion.socialmedia.model.entity.StoryText;
 import com.firstversion.socialmedia.model.entity.User;
+import com.firstversion.socialmedia.repository.MusicRepository;
+import com.firstversion.socialmedia.repository.StickerRepository;
 import com.firstversion.socialmedia.repository.StoryRepository;
+import com.firstversion.socialmedia.repository.StoryStickerRepository;
+import com.firstversion.socialmedia.repository.StoryTextRepository;
 import com.firstversion.socialmedia.repository.UserRepository;
 import com.firstversion.socialmedia.service.StoryService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
+import java.util.logging.Logger;
+import java.util.stream.Collectors;
 
 @Service
 public class StoryServiceImpl implements StoryService {
@@ -28,21 +38,70 @@ public class StoryServiceImpl implements StoryService {
     @Autowired
     UserRepository userRepository;
     @Autowired
+    MusicRepository musicRepository;
+    @Autowired
+    StickerRepository stickerRepository;
+    @Autowired
+    StoryStickerRepository storyStickerRepository;
+    @Autowired
+    StoryTextRepository storyTextRepository;
+    @Autowired
     CloudinaryService cloudinaryService;
+    private Logger logger;
+    @Autowired
+    private StoryMapper storyMapper;
 
     @Override
     public StoryResponse createStory(CreateStoryRequest storyRequest) throws IOException{
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         User user = (User) authentication.getPrincipal();
 
+        Music music = storyRequest.getMusicId() != null ?
+                musicRepository.findById(storyRequest.getMusicId()).orElse(null) : null;
+
         Story story = new Story();
-        String contentUrl = uploadVideo(storyRequest.getContent());
-        story.setType(storyRequest.getType());
-        story.setExpiredAt(LocalDateTime.now().plusHours(24));
-        if (contentUrl != null) story.setContentUrl(contentUrl);
+        Map contentUrl = cloudinaryService.uploadVideo(storyRequest.getContent(), CloudinaryConstant.STORY);
+        logger.info("map content: " + contentUrl);
         story.setUser(user);
-        Story saveStory = storyRepository.save(story);
-        return saveStory.toStoryResponse();
+        story.setMediaUrl(contentUrl.toString());
+        story.setCreatedAt(LocalDateTime.now());
+        story.setExpiresAt(LocalDateTime.now().plusHours(24));
+        story.setMusic(music);
+        story = storyRepository.save(story);
+
+        if (storyRequest.getTexts() != null && !storyRequest.getTexts().isEmpty()) {
+            Story finalStory = story;
+            List<StoryText> texts = storyRequest.getTexts().stream().map(textRequest -> {
+                StoryText text = new StoryText();
+                text.setStory(finalStory);
+                text.setText(textRequest.getContent());
+                text.setPositionX(textRequest.getPositionX());
+                text.setPositionY(textRequest.getPositionY());
+                text.setColor(textRequest.getColor());
+                text.setFont(textRequest.getFontSize());
+                return text;
+            }).toList();
+            storyTextRepository.saveAll(texts);
+        }
+
+        if (storyRequest.getStickers() != null) {
+            Story finalStory1 = story;
+            List<StorySticker> stickerEntities = storyRequest.getStickers().stream().map(stickerRequest -> {
+                Sticker sticker = stickerRepository.findById(stickerRequest.getStickerId())
+                        .orElseThrow(() -> new RuntimeException("Sticker not found"));
+
+                StorySticker storySticker = new StorySticker();
+                storySticker.setStory(finalStory1);
+                storySticker.setSticker(sticker);
+                storySticker.setPositionX(stickerRequest.getPositionX());
+                storySticker.setPositionY(stickerRequest.getPositionY());
+                storySticker.setScale(stickerRequest.getScale());
+                return storySticker;
+            }).toList();
+            storyStickerRepository.saveAll(stickerEntities);
+        }
+
+        return storyMapper.toStoryResponse(story);
     }
 
     public List<Story> getValidStories() {
@@ -52,12 +111,10 @@ public class StoryServiceImpl implements StoryService {
 
     @Override
     public List<StoryResponse> findStoryByUserId(Long userId) {
-        User foundUser = userRepository.findById(userId).orElseThrow(() -> new NotFoundException("User not found."));
         List<Story> stories = storyRepository.findByUserId(userId);
-        if (stories.isEmpty())
-            return List.of();
-        else
-            return stories.stream().map(Story::toStoryResponse).toList();
+        return stories.stream()
+                .map(storyMapper::toStoryResponse)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -73,14 +130,5 @@ public class StoryServiceImpl implements StoryService {
     public void deleteExpiredStories() {
         List<Story> expiredStories = storyRepository.findValidStories(LocalDateTime.now());
         storyRepository.deleteAll(expiredStories);
-    }
-
-    private String uploadVideo(MultipartFile src) throws IOException {
-        String videoUrl = null;
-        if (src != null) {
-            Map<String, Object> result = cloudinaryService.uploadVideo(src);
-            videoUrl = result.get("url").toString();
-        }
-        return videoUrl;
     }
 }
